Inoltre sistemate utility per migrazione verso Jakarta EE
Squashed commit of the following:

commit 6ced860a31dd0ab4c674de6ae50a9b4e852ad8b2
Author: Giuliano Pintori <pintori@link.it>
Date:   Fri Apr 21 18:41:31 2023 +0200

    Libreria Richfaces-Impl-3.3.4

    Escluso inclusione librerie jquery all'interno degli script di libreria.
    Aggiunte istruzioni per caricare jquery dalle librerie interne alla GovWayMonitor.

commit 259f97d06d8bde8f30301f858d9bfab55ee24956
Author: Giuliano Pintori <pintori@link.it>
Date:   Fri Apr 7 19:15:10 2023 +0200

    Aggiornate dipendenze.

commit 48ca411f49d439a7aa25ec927a8d7f275e366ce5
Author: Giuliano Pintori <pintori@link.it>
Date:   Fri Apr 7 19:12:22 2023 +0200

    Libreria RichFaces UI 3.3.4 e IMPL 3.3.4:

    Aggiornate librerie jquery alla versione 3.6.3 e jquery-ui alla versione 1.13.2.
    Corretta configurazione del plugin maven-javascript-plugin per includere esplicitamente tutti i file necessari.

commit b8b10c7dc3d20aa8fd94a957b2a1d27ea12b0b04
Author: Giuliano Pintori <pintori@link.it>
Date:   Fri Apr 7 19:08:13 2023 +0200

    Libreria RichFaces UI 3.3.4:

    Aggiornato codice del progetto maven-javascript-plugin per la generazione del javascript utilizzando le librerie di jquery 3.6.x e jquery-ui 1.13.x.
    E' stato aggioranto il codice java all'ultima versione disponibile per i progetti:

    - https://github.com/yui/yuicompressor
    - https://github.com/davidB/yuicompressor-maven-plugin

    Utilizzati dalla libreria originale ma non capaci di gestire le versioni piu' aggiorante di JS.

commit 6bdb228d882f669daf460f35e5bcb09fb3e05ca4
Author: Giuliano Pintori <pintori@link.it>
Date:   Thu Mar 30 17:39:27 2023 +0200

    Aggiornati plugin di compilazione maven.

commit 9ebefeff397aa77955b1ab695adbdade27ada531
Author: Giuliano Pintori <pintori@link.it>
Date:   Thu Mar 30 16:37:50 2023 +0200

    Libreria RichFaces UI 3.3.4:

    Aggiornata versione del progetto maven-javascript-plugin per la generazione del java